fix css alignment of checkbox in tables

--- a/app/javascript/stylesheets/components/form.sass
+++ b/app/javascript/stylesheets/components/form.sass
@@ -20,4 +20,5 @@ input[type="checkbox"]
 
 .table .form-check-input
   position: inherit
-  margin-left: 0
+  margin: 0 auto
+  display: block
